Add toList ContractorController